test/types/integral/init-on-int2.good
init-on-int2.chpl:1: error: initializers may currently only be defined on class, record, or union types
