test/types/integral/init-on-int2.chpl
proc int.init=(other: int) {
  this = 1;
}
